--- a/casino.html
+++ b/casino.html
@@ -111,6 +111,7 @@
             transition: all 0.3s ease;
             color: #ffd700;
             font-size: 16px;
+            position: relative;
         }
 
         .audio-button:hover {
@@ -199,6 +200,7 @@
             overflow: hidden;
             position: relative;
             box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.5);
+            perspective: 500px;
         }
 
         .card {
@@ -207,7 +209,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #b1b1b1;
+            background: #f0f0f0;
             border-radius: 6px;
             position: absolute;
             top: 0;
@@ -219,33 +221,26 @@
             backface-visibility: hidden;
         }
 
-        /* Simplified spinning animation that works on mobile */
+        /* New rolling casino animation */
         .card.spinning {
-            animation: mobileSpinning 0.15s ease-in-out infinite;
+            animation: casinoRoll 0.2s linear infinite;
             will-change: transform;
         }
 
-        @keyframes mobileSpinning {
+        @keyframes casinoRoll {
             0% {
-                transform: scale(1) translateZ(0);
-                opacity: 1;
-            }
-
-            50% {
-                transform: scale(0.8) translateZ(0);
-                opacity: 0.6;
+                transform: translateY(-100%) rotateX(30deg);
             }
 
             100% {
-                transform: scale(1) translateZ(0);
-                opacity: 1;
+                transform: translateY(100%) rotateX(-30deg);
             }
         }
 
         /* Ensure final cards are properly displayed */
         .card.final {
             animation: none !important;
-            transform: scale(1) translateZ(0) !important;
+            transform: translateZ(0) !important;
             opacity: 1 !important;
             will-change: auto;
         }
@@ -709,6 +704,41 @@
                 -webkit-font-smoothing: antialiased;
             }
         }
+
+        .audio-status {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: #ff0000;
+            border: 2px solid white;
+            transition: background 0.3s ease;
+        }
+
+        .audio-status.active {
+            background: #00ff00;
+        }
+
+        /* Blinking light effect for music playing */
+        .music-playing {
+            animation: blink 1.5s infinite;
+        }
+
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0.5;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
     </style>
 </head>
 
@@ -723,9 +753,11 @@
                 <div class="audio-controls">
                     <div class="audio-button" id="musicToggle" onclick="toggleMusic()" title="Toggle Background Music">
                         🎵
+                        <div class="audio-status" id="musicStatus"></div>
                     </div>
                     <div class="audio-button" id="soundToggle" onclick="toggleSounds()" title="Toggle Sound Effects">
                         🔊
+                        <div class="audio-status" id="audioStatus"></div>
                     </div>
                 </div>
                 <button class="spin-button">Register</button>
@@ -810,6 +842,11 @@
         </div>
     </div>
 
+    <!-- Background Music -->
+    <audio id="backgroundMusic" loop preload="auto">
+        <source src="music/casino.mp3" type="audio/mp3">
+    </audio>
+
     <script>
         let coins = 1000;
         let cost = 10;
@@ -820,10 +857,124 @@
         let highestBalance = 1000;
         let gameOver = false;
 
-        // Audio System
+        // Enhanced Audio System for Mobile
         let soundsEnabled = true;
         let musicEnabled = false;
         let audioContext = null;
+        let audioInitialized = false;
+        let backgroundMusic = document.getElementById('backgroundMusic');
+
+        // Mobile audio initialization
+        function initAudioContext() {
+            if (!audioContext) {
+                try {
+                    audioContext = new (window.AudioContext || window.webkitAudioContext)();
+                    console.log('Audio context created');
+                } catch (e) {
+                    console.log('Audio not supported');
+                    return null;
+                }
+            }
+
+            // Resume audio context if suspended (common on mobile)
+            if (audioContext && audioContext.state === 'suspended') {
+                audioContext.resume().then(() => {
+                    console.log('Audio context resumed');
+                    audioInitialized = true;
+                    updateAudioStatus();
+                });
+            } else if (audioContext && audioContext.state === 'running') {
+                audioInitialized = true;
+                updateAudioStatus();
+            }
+
+            return audioContext;
+        }
+
+        // Mobile-friendly audio initialization
+        function initMobileAudio() {
+            if (!audioInitialized) {
+                const ctx = initAudioContext();
+                if (ctx) {
+                    // Play a silent tone to unlock audio on mobile
+                    try {
+                        const oscillator = ctx.createOscillator();
+                        const gainNode = ctx.createGain();
+                        oscillator.connect(gainNode);
+                        gainNode.connect(ctx.destination);
+                        gainNode.gain.setValueAtTime(0, ctx.currentTime);
+                        oscillator.start(ctx.currentTime);
+                        oscillator.stop(ctx.currentTime + 0.01);
+                        audioInitialized = true;
+                        console.log('Mobile audio unlocked');
+
+                        // Try to play background music if it was enabled
+                        if (musicEnabled) {
+                            playBackgroundMusic();
+                        }
+
+                        updateAudioStatus();
+                    } catch (e) {
+                        console.log('Failed to unlock mobile audio');
+                    }
+                }
+            }
+        }
+
+        function updateAudioStatus() {
+            const audioStatusEl = document.getElementById('audioStatus');
+            const musicStatusEl = document.getElementById('musicStatus');
+
+            if (audioStatusEl) {
+                if (soundsEnabled && audioInitialized) {
+                    audioStatusEl.classList.add('active');
+                } else {
+                    audioStatusEl.classList.remove('active');
+                }
+            }
+
+            if (musicStatusEl) {
+                if (musicEnabled && !backgroundMusic.paused) {
+                    musicStatusEl.classList.add('active');
+                    musicStatusEl.classList.add('music-playing');
+                } else {
+                    musicStatusEl.classList.remove('active');
+                    musicStatusEl.classList.remove('music-playing');
+                }
+            }
+        }
+
+        // Background music functions
+        function playBackgroundMusic() {
+            if (!musicEnabled) return;
+
+            try {
+                // Set volume
+                backgroundMusic.volume = 0.3;
+
+                // Play the music
+                backgroundMusic.play().then(() => {
+                    console.log('Background music started');
+                    updateAudioStatus();
+                }).catch(error => {
+                    console.log('Could not play background music:', error);
+                    // Try to initialize audio on error
+                    initMobileAudio();
+                });
+            } catch (e) {
+                console.log('Error playing background music:', e);
+            }
+        }
+
+        function stopBackgroundMusic() {
+            try {
+                backgroundMusic.pause();
+                backgroundMusic.currentTime = 0;
+                updateAudioStatus();
+            } catch (e) {
+                console.log('Error stopping background music:', e);
+            }
+        }
 
         // Define card images
         const suits = [
@@ -865,18 +1016,16 @@
         ];
 
         // Audio System Functions
-        function initAudioContext() {
-            if (!audioContext) {
-                audioContext = new (window.AudioContext || window.webkitAudioContext)();
-            }
-            return audioContext;
-        }
-
         function createTone(frequency, duration, type = 'sine', volume = 0.1) {
-            if (!soundsEnabled) return;
+            if (!soundsEnabled || !audioInitialized) return;
 
             try {
                 const ctx = initAudioContext();
+                if (!ctx || ctx.state !== 'running') {
+                    console.log('Audio context not ready');
+                    return;
+                }
+
                 const oscillator = ctx.createOscillator();
                 const gainNode = ctx.createGain();
 
@@ -893,7 +1042,7 @@
                 oscillator.start(ctx.currentTime);
                 oscillator.stop(ctx.currentTime + duration);
             } catch (e) {
-                console.log('Audio not supported');
+                console.log('Audio playback failed:', e);
             }
         }
 
@@ -945,10 +1094,14 @@
             if (musicEnabled) {
                 button.textContent = '🎵';
                 button.classList.remove('muted');
+                playBackgroundMusic();
             } else {
                 button.textContent = '🔇';
                 button.classList.add('muted');
+                stopBackgroundMusic();
             }
+
+            updateAudioStatus();
         }
 
         function toggleSounds() {
@@ -958,10 +1111,22 @@
             if (soundsEnabled) {
                 button.textContent = '🔊';
                 button.classList.remove('muted');
+                // Try to initialize audio when enabling sounds
+                if (!audioInitialized) {
+                    initMobileAudio();
+                }
+                // Test sound
+                setTimeout(() => {
+                    if (audioInitialized) {
+                        createTone(800, 0.1, 'square', 0.05);
+                    }
+                }, 100);
             } else {
                 button.textContent = '🔇';
                 button.classList.add('muted');
             }
+
+            updateAudioStatus();
         }
 
         function updateDisplay() {
@@ -1386,13 +1551,34 @@
             updateDisplay();
         }
 
-        // Initialize
+        // Enhanced initialization for mobile audio
         document.addEventListener('DOMContentLoaded', function () {
             updateDisplay();
-            document.addEventListener('click', function initAudio() {
-                initAudioContext();
-                document.removeEventListener('click', initAudio);
-            }, { once: true });
+
+            // Multiple event listeners to ensure audio works on mobile
+            const audioEvents = ['touchstart', 'touchend', 'mousedown', 'keydown', 'click'];
+
+            function initAudioOnce() {
+                initMobileAudio();
+                // Remove all event listeners after first interaction
+                audioEvents.forEach(event => {
+                    document.removeEventListener(event, initAudioOnce);
+                });
+            }
+
+            // Add event listeners for audio initialization
+            audioEvents.forEach(event => {
+                document.addEventListener(event, initAudioOnce, { once: true });
+            });
+
+            // Set up background music
+            backgroundMusic = document.getElementById('backgroundMusic');
+            backgroundMusic.volume = 0.3;
+
+            // Update audio status indicators
+            updateAudioStatus();
+
+            console.log('Audio initialization listeners added');
         });
 
         updateDisplay();
